message ("Построение библиотерки libbuh")
#cmake_minimum_required(VERSION 2.8)
project(libbuh)


#собрать в один список все файлы по регулярному
#выражению. Здесь в переменную CPPS добавляются все файлы по шаблону *.cpp,
#т.е. все исходные файлы. *.h файлы добавлять не надо, т.к. из них не
#создается объектных файлов.

file(GLOB CPPS "*.cpp")

add_library(buh STATIC ${CPPS})# Создание статической библиотеки


