
message ("Построение библиотерки libsrc")

project(libscr)


#собрать в один список все файлы по регулярному
#выражению. Здесь в переменную CPPS добавляются все файлы по шаблону *.cpp,
#т.е. все исходные файлы. *.h файлы добавлять не надо, т.к. из них не
#создается объектных файлов.

file(GLOB CPPS "*.cpp")

add_library(scr STATIC ${CPPS})# Создание статической библиотеки

